# Django_DRF

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
fixtures/: 01_auth.json  02_users.json  03_course.json  04_lesson.json  05_payments.json
materials/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py
users/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_payments.py  0003_subscription.py  0004_payments_payment_id_payments_payment_link.py  0005_alter_payments_user.py  0006_payments_payment_status.py  0007_alter_subscription_course_alter_subscription_user.py
